--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/rebekahpidgeon/athena-app#readme",
   "dependencies": {
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1",
+    "mongoose": "^6.10.2",
     "moongoose": "^0.0.5"
   }
 }
