--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^6.10.2",
-    "moongoose": "^0.0.5"
+    "moongoose": "^0.0.5",
+    "node-fetch": "^3.3.1"
   }
 }
